--- a/component_lib.html
+++ b/component_lib.html
@@ -5,30 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Banana Talk</title>
+    <title>Document</title>
 </head>
 <body>
+    <!-- nav  -->
     <nav class = "navigation">
         <h1>Banana Talk</>
     </nav>
 
+    <!-- input  -->
     <div class="container">
-        <textarea name="textarea" id="txtarea" class="txtarea" placeholder="put your messages here which you want to convert into banana..."></textarea>
+        <textarea class="txtarea" placeholder="put your messages here which you want to convert into banana..."></textarea>
 
-        <button id="btn" class="btn">
+        <!-- button  -->
+        <button class="btn">
             Translate to banana
         </button>
 
+        <!-- output div  -->
         <p style="margin-top: 2rem;">Translation will come here 👇</p>
-            <div id="output" class="output">
+        <div class="output">
+
         </div>
     </div>
 
+    <!-- ribbon  -->
+    <div class="ribbon">
+        <a href="https://github.com/minku-singh/markSix"><img src="./assets/github.png" alt="source code"></a>
+        <a href="https://www.linkedin.com/in/minku-singh/"><img src="./assets/linkedin.png" alt="linkedin"></a>
+        <a href="https://twitter.com/minku_singhh"><img src="./assets/twitter.png" alt="twitter"></a>
+    </div>
+
+    
     <footer class="footer">
         <h2>About</h2>
         <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
     </footer>
-
-    <script src = "./index.js" type="text/javascript"></script>
 </body>
 </html>
