--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         </div>
     </div>
 
+    <div class="ribbon">
+        <a href="https://github.com/minku-singh/markSix"><img src="./assets/github.png" alt="source code"></a>
+        <a href="https://www.linkedin.com/in/minku-singh/"><img src="./assets/linkedin.png" alt="linkedin"></a>
+        <a href="https://twitter.com/minku_singhh"><img src="./assets/twitter.png" alt="twitter"></a>
+    </div>
+
     <footer class="footer">
         <h2>About</h2>
         <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
